# PepperCord

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  Dockerfile  README.md  TODO.md  _config.yml  bot.py  docker-compose.yml  extensionManager.py  ideas.draw  instances.py  main.py  privacy.md  production-stack.yml  pyproject.toml  replit.nix  replit.sh  requirements.txt  tos.md  tox.ini
.continue/rules/: upgrade.md
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  docker.yml  python-app.yml  python-lint.yml  python.yml  update_portainer.yml
_includes/elements/integrations/: discord.html  ghpin.html  topgg.html
cogs/: APIs.py  Administration.py  Dev.py  DiscordInfo.py  Fun.py  Images.py  Levels.py  Messages.py  Moderation.py  ReactionRoles.py  administration.py  apis.py  dev.py  discordInfo.py  explorer.py  fun.py  moderation.py  textDecoration.py
config/: config.yml
core/: admin.py  audioqueue.py  blacklist.py  cooldown.py  customprefix.py  dbl.py  development.py  documents.py  errorhandling.py  jishaku_ext.py  privileges.py
errors/: SubcommandNotFound.py  __init__.py
extensions/: APIs.py  Administration.py  AudioQueue.py  Blacklist.py  BotCheck.py  BotChecks.py  CoinGecko.py  Cooldown.py  CustomCommands.py  CustomPrefix.py  Dev.py  DiscordInfo.py  EditVideoBot.py  ErrorHandling.py  Fun.py  Images.py  Info.py  Jishaku.py  Levels.py  Messages.py  Minecraft.py  Moderation.py  Music.py  NoDMs.py  Privileges.py  ReactionRoles.py  Starboard.py  Startup.py  TextToSpeech.py  TopGG.py  YoutubeDL.py  admin.py  alerts.py  apis.py  audioqueue.py  blacklist.py  coingecko.py  cooldown.py  customcommands.py  customprefix.py  (+23 more)
extensions/audio/: audio.py  control.py  core.py  music.py  tts.py
extensions/core/: admin.py  audiocore.py  audioqueue.py  blacklist.py  cooldown.py  customprefix.py  dbl.py  documents.py  errorhandling.py  no_direct_messages.py  privileges.py  self.py  statup.py
extensions/debug/: development.py
extensions/disabled/: nekos_ext.py
extensions/features/: alerts.py  blacklist.py  categories.py  customcommands.py  discord_info.py  image_editing.py  levelling.py  moderation.py  music_ext.py  reaction_roles.py  remind.py  starboard.py  statuswatch.py
extensions/fun/: fnaf.py  image_editing.py  regal.py  shufflenicks.py  spicebot.py
extensions/fun/fnaf/: __init__.py  abstract.py  discord.py  render.py
extensions/games/fnaf/: abstract.py  discord.py  render.py
extensions/gaming/: minecraft.py  minecraft_status.py  splatoon.py  splatoon2.py  splatoon3.py
extensions/utilities/: dbl.py  ownerutils.py  privileges.py  wordanal.py
managers/: ConfigManager.py  __init__.py
r/: discord  donate.md  invite.md
resources/: README.md  config.example.yml  config.json  configSchema.json  configSchema.yaml  configSchema.yml
resources/locales/: README.md  catspeak.json  en_US.json
src/: main.py
src/extensions/audio/: control.py  core.py  music.py  tts.py
src/extensions/core/: cooldown.py  customprefix.py  (+3 more)
src/utils/: attachments.py  audio.py  converters.py  database.py  fixes.py  help.py  images.py  misc.py  validators.py  version.py  webhook.py
tools/: managers.py
tools/managers/: ConfigManager.py  ExtensionManager.py  __init__.py  configManager.py  extensionManager.py
utils/: attachments.py  audio.py  bot.py  checks.py  consts.py  context.py  converters.py  database.py  errors.py  fixes.py  help.py  images.py  localization.py  managers.py  markdown_tools.py  misc.py  music.py  permissions.py  self.py  validators.py  webhook.py
utils/audio/: __init__.py  config.py  player.py
utils/bot/: bot.py  context.py  documents.py
utils/bots/: __init__.py  audio.py  bot.py  commands.py  context.py  documents.py
utils/checks/: __init__.py  audio.py  blacklisted.py  bot.py  permissions.py  voice.py  votes.py
utils/embed_menus/: audio.py
utils/errors/: __init__.py  bot.py  commands.py  permissions.py  starboard.py  voice.py
utils/managers/: ConfigManager.py  PermissionManager.py  __init__.py  common.py  guild.py  user.py
utils/music/: __init__.py  player.py  queue.py
utils/sources/: __init__.py  _fixes.py  common.py  tts.py  ytdl.py
(+40 files in other folders)
