[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry[voice]>=0.12"]

[tool]
[tool.poetry]
authors = ["regulad <regulad@outlook.com>"]
description = "General Discord bot for small servers."
license = "GPLv3"
name = "PepperCord"
version = "0.1.0"
[tool.poetry.dependencies]
art = "^5.1"
"discord.py" = "^1.7.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
