[tool.poetry]
name = "peppercord"
version = "9.1.2"
description = "A multi-purpose Discord bot written in Python."
authors = ["Parker Wahle <regulad@regulad.xyz>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
aiocoingecko = "^1.0.0"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
"anekos.py" = "^2.0.0"
art = "^5.8"
async-gtts = "^0.3.0"
asyncio-dgram = "^2"
beautifulsoup4 = "^4.11.1"
discord-ext-hybrid-menus = "^1.0.3"
discord-pretty-help = "^2"
"discord.py" = {version = "^2", extras = ["voice", "speed"]}
dnspython = "^2.2.1"  # ignore, required by mcstatus
"evb.py" = "^1.1.1"
gitpython = "^3.1.31"
jishaku = "^2.3.2"
lxml = "^4.9.1"
mcstatus = "^10.0.1"
motor = "^3.1.1"
pillow = "^9"
psutil = "^5.9"
pymongo = "^4.3.3"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.1"
reportlab = "^3.5.68"
svglib = "^1.1.0"
youtube-dl = ">=2021.12"
dislog = "^2.1.0"
yt-dlp = "^2023.2.17"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
tox = "^4.6.4"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
tox-gh-actions = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.type.dependencies]
mypy = "^1.0.0"
types-aiofiles = "^22.1.0.8"
types-python-dateutil = "^2.8.19.7"
